# XIA2tree

./: .gitignore  CITATION.cff  CMakeLists.txt  Co60_coincidence_sort.cpp  FileInspector.cpp  ParticleCoincidenceSort.cpp  README.md  TimingInvestigation.cpp  commands.md  config.yml  main.cpp
.github/workflows/: UpdateHomebrew.yml  ci.yml  macos.yml  ubuntu.yml
cal/: CalibrateLaBrL.C  LaBr250MHz.yaml  LaBr500MHz.yaml  cal_basic.txt
cmake/: GitVersion.cmake
docs/: architecture.md  plugins.md  usage.md
include/: version.h.in
include/Format/: entry.h  event.h  xiaformat.h
include/PhysicalParam/: Calibration.h  ConfigManager.h  DetectorTypes.h  ParticleRange.h  ParticleTypes.h  XIA_CFD.h  experimentsetup.h
include/RootInterface/: HistManager.h  MetadataWriter.h  RootFileManager.h  TTreeManager.h  TreeManager.h
include/Tasks/: Buffer.h  BufferSE.h  Calibrator.h  Converter.h  MTSort.h  Queue.h  RootSort.h  Sort.h  Splitter.h  SplitterSE.h  Task.h  Tasks.h  Trigger.h  Triggers.h  XIAReader.h
include/Tools/: CommandLineInterface.h  Metadata.h  ProgressUI.h  ThreadPool.hpp
include/UserSort/: DynamicLibrary.h  UserSort.h  UserSortManager.h  zrange.h
src/Format/: event.cpp
src/PhysicalParam/: Calibration.cpp  ConfigManager.cpp  ParticleRange.cpp  XIA_CFD.cpp  experimentsetup.cpp
src/RootInterface/: MetadataWriter.cpp  TTreeManager.cpp
src/Tasks/: Buffer.cpp  BufferSE.cpp  Calibrator.cpp  MTSort.cpp  Sort.cpp  Splitter.cpp  SplitterSE.cpp  Trigger.cpp  XIAReader.cpp
src/Tools/: CommandLineInterface.cpp  Metadata.cpp  ProgressUI.cpp
src/UserSort/: DynamicLibrary.cpp  UserSortManager.cpp
test/: CMakeLists.txt
test/src/: doctest_main.cpp  integration_merge_files.cpp  integration_run_sort.cpp  unit_cli.cpp  unit_config_manager.cpp  unit_particle_range.cpp  unit_tasks_parallel_end.cpp  unit_tasks_splitter.cpp  unit_tasks_triggers.cpp
